--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <div class="collapse navbar-collapse" id="navBurger">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a href="#home" class="nav-link active" aria-current="page">Home</a>
+              <a href="#home" class="nav-link active nav-text-size" aria-current="page">Home</a>
             </li>
-            <li class="nav-item"><a href="#projects-carousel" class="nav-link">Projects</a></li>
-            <li class="nav-item"><a href="#contact-form" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="#projects-carousel" class="nav-link nav-text-size">Projects</a></li>
+            <li class="nav-item"><a href="#contact-form" class="nav-link nav-text-size">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -162,15 +162,15 @@
       <div class="col-8 p-4">
         <form>
           <div class="form-group mb-4">
-            <label for="contactName">Name</label>
+            <label for="contactName" class="mb-2 h4">Name</label>
             <input type="text" class="form-control" placeholder="First and Last Name">
           </div>
           <div class="form-group my-4">
-            <label for="contactEmail">Email</label>
+            <label for="contactEmail" class="mb-2 h4">Email</label>
             <input type="email" class="form-control" placeholder="Email Address">
           </div>
           <div class="form-group my-4">
-            <label for="contactMessage">Message</label>
+            <label for="contactMessage" class="mb-2 h4">Message</label>
             <textarea class="form-control" placeholder="Enter Your Message" rows="4"></textarea>
           </div>
           <button type="submit" class="btn btn-primary mt-3">Submit</button>
