--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Secular+One&family=Varta&display=swap"
+    rel="stylesheet">
+  <!-- Personal Style Sheet -->
   <link rel="stylesheet" href="css/style.css">
 
   <title>James Matlock - Web Developer</title>
@@ -17,7 +23,7 @@
 <body>
   <!-- Navbar -->
   <div class="container-fluid">
-    <nav class="navbar fixed-top navbar-expand-md bg-opacity-10 navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-lg bg-opacity-10 navbar-dark bg-dark">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navBurger">
           <span class="navbar-toggler-icon"></span>
@@ -39,13 +45,13 @@
   <!-- Intro Jumbotron -->
   <div class="container-fluid">
     <div class="row justify-content-center">
-      <div class="col-8 p-4 mt-5 text-light">
-        <p class="h3">Hello! My name is</p>
-        <p class="h1 big-name"><b>James Matlock</b></p>
-        <p class="h3">And I am a Web Developer</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, odit! Voluptatibus eveniet in nisi
-          similique provident obcaecati, soluta fugiat reiciendis nostrum aperiam, est animi laborum tempore voluptates,
-          nulla suscipit ad.
+      <div class="col-10 col-lg-6 p-4 mt-5 text-light">
+        <p class="h3 p-font mt-5">&#128075 Hello! My name is</p>
+        <p class="h1 big-name title-font mb-3"><b>James Matlock</b></p>
+        <p class="h3 title-font mb-3">And I am a Web Developer</p>
+        <p class="p-font h5">I am a highly motivated student and aspiring web developer based out of Fresno, CA.
+          Although I don't have much experience yet, I am always learning and expanding my repertoire of technologies.
+          My current focus is on front-end development but I intend to expand into back-end programming in the future.
         </p>
       </div>
     </div>
@@ -54,44 +60,68 @@
   <!-- Skills Card -->
   <div class="container-fluid text-light">
     <div class="row justify-content-center">
-      <div class="col-8 p-4">
-        <p class="h2">My Skills</p>
-        <p>This is a list of my skills. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, odio!</p>
+      <div class="col-10 col-lg-6 p-4">
+        <p class="h2 title-font mb-3 mt-5">My Skills</p>
+        <p class="p-font h5">Below is a list of technologies that I currently know. But I am constantly learning and
+          adding to my skillset.</p>
       </div>
     </div>
     <div class="row justify-content-center my-5">
-      <div class="col-2 text-center"><i class="fa-brands fa-html5 big-icons orange-icon pb-3"></i><br>
+      <div class="col-3 col-lg-2 text-center"><i class="fa-brands fa-html5 big-icons orange-icon pb-3"></i><br>
         <p class="h3">HTML5</p>
       </div>
-      <div class="col-2 text-center"><i class="fa-brands fa-css3 big-icons blue-icon pb-3"></i><br>
+      <div class="col-3 col-lg-2 text-center"><i class="fa-brands fa-css3 big-icons blue-icon pb-3"></i><br>
         <p class="h3">CSS3</p>
       </div>
-      <div class="col-2 text-center"><i class="fa-brands fa-js big-icons yellow-icon pb-3"></i><br>
+      <div class="col-3 col-lg-2 text-center"><i class="fa-brands fa-js big-icons yellow-icon pb-3"></i><br>
         <p class="h3">JavaScript</p>
       </div>
-
     </div>
+
     <div class="row justify-content-center my-5">
-      <div class="col-2 text-center"><i class="fa-brands fa-bootstrap big-icons purple-icon pb-3"></i><br>
+
+      <div class="col-3 col-lg-2 text-center"><i class="fa-brands fa-git-alt big-icons git-logo pb-3"></i><br>
+        <p class="h3">Git</p>
+      </div>
+
+      <div class="col-3 col-lg-2 text-center"><i class="fa-brands fa-bootstrap big-icons purple-icon pb-3"></i><br>
         <p class="h3">Bootstrap Framework</p>
       </div>
-      <div class="col-2 text-center"><i class="fa-brands fa-google big-icons google-icon pb-3"></i><br>
+
+      <div class="col-3 col-lg-2 text-center"><i class="fa-brands fa-sass big-icons pink-icon pb-3"></i><br>
+        <p class="h3">SASS</p>
+      </div>
+    </div>
+
+    <div class="row justify-content-center my-5">
+      <div class="col-3 col-lg-2 text-center">
+        <img src="./img/c-logo.png" alt="C++ Logo" width="75px" height="80px" class="mb-3">
+        <br>
+        <p class="h3">C++</p>
+      </div>
+      <div class="col-3 col-lg-2 text-center"><img src="./img/vb-logo.png" alt="C++ Logo" width="75px" height="75px"
+          class="mb-3"><br>
+        <p class="h3">Visual Basic</p>
+      </div>
+      <div class="col-3 col-lg-2 text-center"><i class="fa-brands fa-google big-icons google-icon pb-3"></i><br>
         <p class="h3">Googling Things</p>
       </div>
     </div>
+
   </div>
 
   <!-- Projects Carousel -->
   <div id="projects-carousel" class="container-fluid text-light">
     <div class="row justify-content-center">
-      <div class="col-8 p-4">
-        <p class="h2 mb-5">My Projects</p>
+      <div class="col-10 col-lg-6 p-4">
+        <p class="h2 mb-5 title-font">My Projects</p>
         <div id="myCarousel" class="carousel slide" data-bs-ride="true">
           <div class="carousel-indicators">
             <button data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></button>
             <button data-bs-target="#myCarousel" data-bs-slide-to="1"></button>
             <button data-bs-target="#myCarousel" data-bs-slide-to="2"></button>
             <button data-bs-target="#myCarousel" data-bs-slide-to="3"></button>
+            <button data-bs-target="#myCarousel" data-bs-slide-to="4"></button>
           </div>
 
           <div class="carousel-inner">
@@ -135,6 +165,15 @@
                   target="_blank">Visit</a>
               </div>
             </div>
+
+            <div class="carousel-item">
+              <img src="img/portfolio-ss.png" alt="Slide 5" class="d-block w-100">
+              <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75">
+                <h4><b>Webception</b></h4>
+                <p>It's literally just the website you're currently on. Why would you click to visit it again?</p>
+                <a class="btn btn-outline-light" href="#home" target="_blank">Visit</a>
+              </div>
+            </div>
           </div>
 
           <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
@@ -152,14 +191,14 @@
   </div>
 
   <!-- Contact Form -->
-  <div id="contact-form" class="container-fluid text-light">
+  <div id="contact-form" class="container-fluid text-light mt-5">
     <div class="row justify-content-center">
-      <div class="col-8 p-4">
-        <p class="h2">Contact Me</p>
+      <div class="col-10 col-lg-6 p-4">
+        <p class="h2 title-font">Contact Me</p>
       </div>
     </div>
     <div class="row justify-content-center">
-      <div class="col-8 p-4">
+      <div class="col-10 col-lg-6 p-4">
         <form>
           <div class="form-group mb-4">
             <label for="contactName" class="mb-2 h4">Name</label>
@@ -175,6 +214,30 @@
           </div>
           <button type="submit" class="btn btn-primary mt-3">Submit</button>
         </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <div class="container-fluid">
+    <div class="row justify-content-center text-light my-5">
+      <div class="col-4 col-sm-5 col-lg-3 p-4">
+        <img src="./img/md-logo.png" alt="MD Logo" width="100px">
+        <p class="mt-3 text-muted p-font">Created by James Matlock</p>
+        <p class="text-muted p-font">Icons provided by Font Awesome</p>
+
+
+      </div>
+      <div class=" col-8 col-sm-5 col-lg-3 p-4 text-end">
+        <a href="www.facebook.com" class="no-dec text-light">
+          <i class="fa-brands fa-square-facebook med-icons"></i>
+        </a>
+        <a href="www.instagram.com" class="no-dec text-light">
+          <i class="fa-brands fa-square-instagram med-icons ms-3"></i>
+        </a>
+        <a href="www.twitter.com" class="no-dec text-light">
+          <i class="fa-brands fa-square-twitter med-icons mx-3"></i>
+        </a>
       </div>
     </div>
   </div>
