--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <!-- Intro Jumbotron -->
   <div class="container-fluid">
     <div class="row justify-content-center">
-      <div class="col-10 col-lg-6 p-4 mt-5 text-light">
+      <div class="col-md-10 col-lg-6 p-4 mt-5 text-light">
         <p class="h3 p-font mt-5">&#128075 Hello! My name is</p>
         <p class="h1 big-name title-font mb-3"><b>James Matlock</b></p>
         <p class="h3 title-font mb-3">And I am a Web Developer</p>
@@ -60,50 +60,50 @@
   <!-- Skills Card -->
   <div class="container-fluid text-light">
     <div class="row justify-content-center">
-      <div class="col-10 col-lg-6 p-4">
+      <div class="col-md-10 col-lg-6 p-4">
         <p class="h2 title-font mb-3 mt-5">My Skills</p>
         <p class="p-font h5">Below is a list of technologies that I currently know. But I am constantly learning and
           adding to my skillset.</p>
       </div>
     </div>
     <div class="row justify-content-center my-5">
-      <div class="col-3 col-lg-2 text-center"><i class="fa-brands fa-html5 big-icons orange-icon pb-3"></i><br>
+      <div class="col-4 col-md-3 col-lg-2 text-center"><i class="fa-brands fa-html5 big-icons orange-icon pb-3"></i><br>
         <p class="h3">HTML5</p>
       </div>
-      <div class="col-3 col-lg-2 text-center"><i class="fa-brands fa-css3 big-icons blue-icon pb-3"></i><br>
+      <div class="col-4 col-md-3 col-lg-2 text-center"><i class="fa-brands fa-css3 big-icons blue-icon pb-3"></i><br>
         <p class="h3">CSS3</p>
       </div>
-      <div class="col-3 col-lg-2 text-center"><i class="fa-brands fa-js big-icons yellow-icon pb-3"></i><br>
+      <div class="col-4 col-md-3 col-lg-2 text-center"><i class="fa-brands fa-js big-icons yellow-icon pb-3"></i><br>
         <p class="h3">JavaScript</p>
       </div>
     </div>
 
     <div class="row justify-content-center my-5">
 
-      <div class="col-3 col-lg-2 text-center"><i class="fa-brands fa-git-alt big-icons git-logo pb-3"></i><br>
+      <div class="col-4 col-md-3 col-lg-2 text-center"><i class="fa-brands fa-git-alt big-icons git-logo pb-3"></i><br>
         <p class="h3">Git</p>
       </div>
 
-      <div class="col-3 col-lg-2 text-center"><i class="fa-brands fa-bootstrap big-icons purple-icon pb-3"></i><br>
+      <div class="col-4 col-md-3 col-lg-2 text-center"><i class="fa-brands fa-bootstrap big-icons purple-icon pb-3"></i><br>
         <p class="h3">Bootstrap Framework</p>
       </div>
 
-      <div class="col-3 col-lg-2 text-center"><i class="fa-brands fa-sass big-icons pink-icon pb-3"></i><br>
+      <div class="col-4 col-md-3 col-lg-2 text-center"><i class="fa-brands fa-sass big-icons pink-icon pb-3"></i><br>
         <p class="h3">SASS</p>
       </div>
     </div>
 
     <div class="row justify-content-center my-5">
-      <div class="col-3 col-lg-2 text-center">
+      <div class="col-4 col-md-3 col-lg-2 text-center">
         <img src="./img/c-logo.png" alt="C++ Logo" width="75px" height="80px" class="mb-3">
         <br>
         <p class="h3">C++</p>
       </div>
-      <div class="col-3 col-lg-2 text-center"><img src="./img/vb-logo.png" alt="C++ Logo" width="75px" height="75px"
+      <div class="col-4 col-md-3 col-lg-2 text-center"><img src="./img/vb-logo.png" alt="C++ Logo" width="75px" height="75px"
           class="mb-3"><br>
         <p class="h3">Visual Basic</p>
       </div>
-      <div class="col-3 col-lg-2 text-center"><i class="fa-brands fa-google big-icons google-icon pb-3"></i><br>
+      <div class="col-4 col-md-3 col-lg-2 text-center"><i class="fa-brands fa-google big-icons google-icon pb-3"></i><br>
         <p class="h3">Googling Things</p>
       </div>
     </div>
@@ -113,7 +113,7 @@
   <!-- Projects Carousel -->
   <div id="projects-carousel" class="container-fluid text-light">
     <div class="row justify-content-center">
-      <div class="col-10 col-lg-6 p-4">
+      <div class="col-md-10 col-lg-6 p-4">
         <p class="h2 mb-5 title-font">My Projects</p>
         <div id="myCarousel" class="carousel slide" data-bs-ride="true">
           <div class="carousel-indicators">
@@ -193,12 +193,12 @@
   <!-- Contact Form -->
   <div id="contact-form" class="container-fluid text-light mt-5">
     <div class="row justify-content-center">
-      <div class="col-10 col-lg-6 p-4">
+      <div class="col-md-10 col-lg-6 p-4">
         <p class="h2 title-font">Contact Me</p>
       </div>
     </div>
     <div class="row justify-content-center">
-      <div class="col-10 col-lg-6 p-4">
+      <div class="col-md-10 col-lg-6 p-4">
         <form>
           <div class="form-group mb-4">
             <label for="contactName" class="mb-2 h4">Name</label>
