Fixed an opacity issue with the navbar burger menu

--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
 <body>
   <!-- Navbar -->
   <div class="container-fluid">
-    <nav class="navbar fixed-top navbar-expand-lg bg-opacity-10 navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-lg bg-opacity-100 navbar-dark nav-bg-color">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navBurger">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navBurger">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
+            <li class="nav-item bg-opacity-100">
               <a href="#home" class="nav-link active nav-text-size" aria-current="page">Home</a>
             </li>
-            <li class="nav-item"><a href="#projects-carousel" class="nav-link nav-text-size">Projects</a></li>
-            <li class="nav-item"><a href="#contact-form" class="nav-link nav-text-size">Contact</a></li>
+            <li class="nav-item bg-opacity-100"><a href="#projects-carousel" class="nav-link nav-text-size">Projects</a></li>
+            <li class="nav-item bg-opacity-100"><a href="#contact-form" class="nav-link nav-text-size">Contact</a></li>
           </ul>
         </div>
       </div>
