--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
   <!-- End Navbar -->
 
   <!-- Intro Jumbotron -->
-  <div class="container-fluid">
+  <div id="#home" class="container-fluid">
     <div class="row justify-content-center">
       <div class="col-md-10 col-lg-6 p-4 mt-5 text-light">
         <p class="h3 p-font mt-5">&#128075 Hello! My name is</p>
         <p class="h1 big-name title-font mb-3"><b>James Matlock</b></p>
-        <p class="h3 title-font mb-3">And I am a Web Developer</p>
+        <p class="h3 title-font d-inline-block">And I am a Web Developer</p>
+        <p class="aspiring text-muted mb-3">*aspiring</p>
         <p class="p-font h5">I am a highly motivated student and aspiring web developer based out of Fresno, CA.
           Although I don't have much experience yet, I am always learning and expanding my repertoire of technologies.
           My current focus is on front-end development but I intend to expand into back-end programming in the future.
