--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
         <div class="collapse navbar-collapse" id="navBurger">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item bg-opacity-100">
-              <a href="#home" class="nav-link active nav-text-size" aria-current="page">Home</a>
+              <a href="#home-card" class="nav-link active nav-text-size" aria-current="page">Home</a>
             </li>
-            <li class="nav-item bg-opacity-100"><a href="#projects-carousel" class="nav-link nav-text-size">Projects</a></li>
-            <li class="nav-item bg-opacity-100"><a href="#contact-form" class="nav-link nav-text-size">Contact</a></li>
+            <li class="nav-item bg-opacity-100">
+              <a href="#projects-carousel" class="nav-link nav-text-size">Projects</a>
+            </li>
+            <li class="nav-item bg-opacity-100">
+              <a href="#contact-form" class="nav-link nav-text-size">Contact</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -43,7 +47,7 @@
   <!-- End Navbar -->
 
   <!-- Intro Jumbotron -->
-  <div id="#home" class="container-fluid">
+  <div id="#home-card" class="container-fluid">
     <div class="row justify-content-center">
       <div class="col-md-10 col-lg-6 p-4 mt-5 text-light">
         <p class="h3 p-font mt-5">&#128075 Hello! My name is</p>
